# internal/blog/routes.go
@@ -8,8 +8,11 @@ import (
 func RegisterBlogRoutes(r *mux.Router) {
 	r.HandleFunc("", GetBlogsHandler).Methods("GET")
 	r.HandleFunc("", CreateBlogHandler).Methods("POST")
-	r.HandleFunc("/{id:[0-9]+}", GetBlogByIDHandler).Methods("GET")
-	r.HandleFunc("/{id:[0-9]+}", UpdateBlogHandler).Methods("PUT")
-	r.HandleFunc("/{id:[0-9]+}", DeleteBlogHandler).Methods("DELETE")
+	r.HandleFunc("/{id:[a-fA-F0-9-]+}", GetBlogByIDHandler).Methods("GET")
+	r.HandleFunc("/{id:[a-fA-F0-9-]+}", UpdateBlogHandler).Methods("PUT")
+	r.HandleFunc("/{id:[a-fA-F0-9-]+}", DeleteBlogHandler).Methods("DELETE")
 	r.HandleFunc("/search", SearchBlogsHandler).Methods("GET")
+	r.HandleFunc("/{id:[a-fA-F0-9-]+}/categories", AddCategoryToBlogHandler).Methods("POST")
+	r.HandleFunc("/{id:[a-fA-F0-9-]+}/categories/{category_id:[a-fA-F0-9-]+}", RemoveCategoryFromBlogHandler).Methods("DELETE") // Remove category from blog
+
 }
